<resources>
    <string name="app_name">Reviews and Ratings</string>
    <string name="reviews_ratings"><![CDATA[Reviews & Ratings]]></string>
    <string name="_1087_reviews"><u>1087 reviews</u></string>
    <string name="dummy_food_image">Dummy food Image</string>
    <string name="recommended_dishes">Recommended Dishes</string>
    <string name="filters">Filters</string>
    <string name="tag">Tag</string>
    <string name="back_navigation_button">Back navigation button</string>
    <string name="honey_chilli_potato_lasagna">Honey chilli potato, Lasagna</string>
    <string name="_1_week_ago">1 week ago</string>
    <string name="_4_5">4.5</string>
    <string name="_4_4">4.4</string>
</resources>